Release 4.1.3.32 and migrate to OSS auto-repair
Summary:
This change merges our internal auto-repair functionality with the OSS Unified Repair Solution

The rollout plan, including details on migrating Goalstate for incompatible instances, a rollback plan, and other new functionalities, is outlined in the project [[ https://docs.google.com/document/d/1-9srIuYPQPcwyHh1BiKXDRY_6BhLFQoSTlCIq7NjvJ0/edit?usp=sharing | ERD ]] .

Test Plan:
This test plan details the results of initial experiments validating the OSS-merged version of auto-repair. The testing was conducted to verify core functionality and compare the behavior of the new implementation against our existing framework.

  - Experiment 1: Manual Repair of a Small Dataset
     We conducted manual repairs on a small dataset to isolate the behavior of both full and incremental repair types. The goal was to ensure that the fundamental repair logic for reconciling inconsistencies—regardless of the volume—works as expected in the new OSS-merged code.

  - Experiment 2: Automated Repair with High Data Volume
     This experiment scaled up the testing to a dataset of 10,000 rows. We configured the auto-repair scheduler to run various repair types automatically. The objective was to observe how the new scheduler handles a production-like volume of data, validating its ability to manage and complete repairs efficiently in the background without manual intervention.

  - Experiment 3: Rollback Validation
     We rolled back the Cassandra instance to a prior release that uses our original, pre-OSS auto-repair implementation. This was to confirm that the changes do not interfere with the functionality of the older system, ensuring a safe and reliable path for potential rollbacks during a phased rollout. This [[ https://code.uberinternal.com/D18868859 | diff ]] takes care of any incompatible configurations for all instances in the event of a rollback.

Results of the experiments and linked Grafana dashboard for the metrics a